<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/tvNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_ttl"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvNoteContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nte_cont"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="4dp"
        android:maxLines="2"
        android:ellipsize="end" />

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_ej"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="4dp" />

</LinearLayout>